# presto

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: astro.yml  build-app-mac.yml  build-app.yml  build-website.yml
docs/: game-md-structure.md
presto-client/: package-lock.json  package.json
presto-client/src-tauri/: Cargo.toml  tauri.conf.json
presto-client/src-tauri/src/: main.rs
presto-web/: .gitignore  package-lock.json  package.json
presto-web/public/: robots.txt
presto-web/public/games/: 2s2h.avif  soh.avif
presto-web/src/: config.web.ts
presto-web/src/components/: Footer.astro  Header.astro  SideBar.astro
presto-web/src/content/: config.ts
presto-web/src/layouts/: BaseLayout.astro
presto-web/src/lib/: createSlug.ts
presto-web/src/pages/: 404.astro  about.astro  index.astro  rss.xml.js
public/games/: starship.avif
src/: config.client.ts  supportedPlatforms.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: filemgmt.rs  lib.rs  main.rs  unzip.rs
src/components/: Footer.astro  HorizontalCard.astro  Install.astro  Play.astro  SideBarMenu.astro  StatusBar.astro  Uninstall.astro
src/components/settings/: GamePadControls.astro  SetBaseDirectory.astro  Settings.astro
src/content/: config.ts
src/content/game/: 2ship2harkinian.md  (+4 more)
src/layouts/: BaseLayout.astro  GameLayout.astro
src/pages/: about.astro  index.astro  settings.astro
src/styles/: global.css
(+13 files in other folders)
